// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form elements form success message 1`] = `
<DocumentFragment>
  .emotion-0 button::-moz-focus-inner,
.emotion-0 [type="button"]::-moz-focus-inner,
.emotion-0 [type="reset"]::-moz-focus-inner,
.emotion-0 [type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.emotion-0 html {
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
}

.emotion-0 main {
  display: block;
}

.emotion-0 h1 {
  font-size: 2em;
  margin: 0.67em 0;
}

.emotion-0 hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}

.emotion-0 pre {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 a {
  background-color: transparent;
}

.emotion-0 abbr[title] {
  border-bottom: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration: underline dotted;
  text-decoration: underline dotted;
}

.emotion-0 b,
.emotion-0 strong {
  font-weight: bolder;
}

.emotion-0 code,
.emotion-0 kbd,
.emotion-0 samp {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 small {
  font-size: 80%;
}

.emotion-0 sub,
.emotion-0 sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

.emotion-0 sub {
  bottom: -0.25em;
}

.emotion-0 sup {
  top: -0.5em;
}

.emotion-0 img {
  border-style: none;
}

.emotion-0 button,
.emotion-0 input,
.emotion-0 optgroup,
.emotion-0 select,
.emotion-0 textarea {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
}

.emotion-0 button,
.emotion-0 input {
  overflow: visible;
}

.emotion-0 button,
.emotion-0 select {
  text-transform: none;
}

.emotion-0 button,
.emotion-0 [type="button"],
.emotion-0 [type="reset"],
.emotion-0 [type="submit"] {
  -webkit-appearance: button;
}

.emotion-0 body {
  margin: 0;
}

.emotion-0 button:-moz-focusring,
.emotion-0 [type="button"]:-moz-focusring,
.emotion-0 [type="reset"]:-moz-focusring,
.emotion-0 [type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.emotion-0 fieldset {
  padding: 0.35em 0.75em 0.625em;
}

.emotion-0 legend {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}

.emotion-0 progress {
  vertical-align: baseline;
}

.emotion-0 textarea {
  overflow: auto;
}

.emotion-0 [type="checkbox"],
.emotion-0 [type="radio"] {
  box-sizing: border-box;
  padding: 0;
}

.emotion-0 [type="number"]::-webkit-inner-spin-button,
.emotion-0 [type="number"]::-webkit-outer-spin-button {
  height: auto;
}

.emotion-0 [type="search"] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}

.emotion-0 [type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

.emotion-0::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.emotion-0 details {
  display: block;
}

.emotion-0 summary {
  display: list-item;
}

.emotion-0 template {
  display: none;
}

.emotion-0 [hidden] {
  display: none;
}

.emotion-0 * {
  box-sizing: border-box;
  font-family: "Helvetica Neue",Helvetica,sans-serif;
}

.emotion-0 * .is-disabled {
  opacity: 0.5;
  pointer-events: none;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin: xl;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-4"
        >
          test
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`form elements form success title 1`] = `
<DocumentFragment>
  .emotion-0 button::-moz-focus-inner,
.emotion-0 [type="button"]::-moz-focus-inner,
.emotion-0 [type="reset"]::-moz-focus-inner,
.emotion-0 [type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.emotion-0 html {
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
}

.emotion-0 main {
  display: block;
}

.emotion-0 h1 {
  font-size: 2em;
  margin: 0.67em 0;
}

.emotion-0 hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}

.emotion-0 pre {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 a {
  background-color: transparent;
}

.emotion-0 abbr[title] {
  border-bottom: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration: underline dotted;
  text-decoration: underline dotted;
}

.emotion-0 b,
.emotion-0 strong {
  font-weight: bolder;
}

.emotion-0 code,
.emotion-0 kbd,
.emotion-0 samp {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 small {
  font-size: 80%;
}

.emotion-0 sub,
.emotion-0 sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

.emotion-0 sub {
  bottom: -0.25em;
}

.emotion-0 sup {
  top: -0.5em;
}

.emotion-0 img {
  border-style: none;
}

.emotion-0 button,
.emotion-0 input,
.emotion-0 optgroup,
.emotion-0 select,
.emotion-0 textarea {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
}

.emotion-0 button,
.emotion-0 input {
  overflow: visible;
}

.emotion-0 button,
.emotion-0 select {
  text-transform: none;
}

.emotion-0 button,
.emotion-0 [type="button"],
.emotion-0 [type="reset"],
.emotion-0 [type="submit"] {
  -webkit-appearance: button;
}

.emotion-0 body {
  margin: 0;
}

.emotion-0 button:-moz-focusring,
.emotion-0 [type="button"]:-moz-focusring,
.emotion-0 [type="reset"]:-moz-focusring,
.emotion-0 [type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.emotion-0 fieldset {
  padding: 0.35em 0.75em 0.625em;
}

.emotion-0 legend {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}

.emotion-0 progress {
  vertical-align: baseline;
}

.emotion-0 textarea {
  overflow: auto;
}

.emotion-0 [type="checkbox"],
.emotion-0 [type="radio"] {
  box-sizing: border-box;
  padding: 0;
}

.emotion-0 [type="number"]::-webkit-inner-spin-button,
.emotion-0 [type="number"]::-webkit-outer-spin-button {
  height: auto;
}

.emotion-0 [type="search"] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}

.emotion-0 [type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

.emotion-0::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.emotion-0 details {
  display: block;
}

.emotion-0 summary {
  display: list-item;
}

.emotion-0 template {
  display: none;
}

.emotion-0 [hidden] {
  display: none;
}

.emotion-0 * {
  box-sizing: border-box;
  font-family: "Helvetica Neue",Helvetica,sans-serif;
}

.emotion-0 * .is-disabled {
  opacity: 0.5;
  pointer-events: none;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-bottom: md;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-1"
      >
        <div
          aria-level="1"
          class="emotion-4"
          role="heading"
        >
          <div
            class="emotion-5"
          >
            hi
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields checkbox field 1`] = `
<DocumentFragment>
  .emotion-0 [type="checkbox"],
.emotion-0 [type="radio"] {
  box-sizing: border-box;
  padding: 0;
}

.emotion-0 html {
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
}

.emotion-0 main {
  display: block;
}

.emotion-0 h1 {
  font-size: 2em;
  margin: 0.67em 0;
}

.emotion-0 hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}

.emotion-0 pre {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 a {
  background-color: transparent;
}

.emotion-0 abbr[title] {
  border-bottom: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration: underline dotted;
  text-decoration: underline dotted;
}

.emotion-0 b,
.emotion-0 strong {
  font-weight: bolder;
}

.emotion-0 code,
.emotion-0 kbd,
.emotion-0 samp {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 small {
  font-size: 80%;
}

.emotion-0 sub,
.emotion-0 sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

.emotion-0 sub {
  bottom: -0.25em;
}

.emotion-0 sup {
  top: -0.5em;
}

.emotion-0 img {
  border-style: none;
}

.emotion-0 button,
.emotion-0 input,
.emotion-0 optgroup,
.emotion-0 select,
.emotion-0 textarea {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
}

.emotion-0 button,
.emotion-0 input {
  overflow: visible;
}

.emotion-0 button,
.emotion-0 select {
  text-transform: none;
}

.emotion-0 button,
.emotion-0 [type="button"],
.emotion-0 [type="reset"],
.emotion-0 [type="submit"] {
  -webkit-appearance: button;
}

.emotion-0 button::-moz-focus-inner,
.emotion-0 [type="button"]::-moz-focus-inner,
.emotion-0 [type="reset"]::-moz-focus-inner,
.emotion-0 [type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.emotion-0 button:-moz-focusring,
.emotion-0 [type="button"]:-moz-focusring,
.emotion-0 [type="reset"]:-moz-focusring,
.emotion-0 [type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.emotion-0 fieldset {
  padding: 0.35em 0.75em 0.625em;
}

.emotion-0 legend {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}

.emotion-0 progress {
  vertical-align: baseline;
}

.emotion-0 textarea {
  overflow: auto;
}

.emotion-0 body {
  margin: 0;
}

.emotion-0 [type="number"]::-webkit-inner-spin-button,
.emotion-0 [type="number"]::-webkit-outer-spin-button {
  height: auto;
}

.emotion-0 [type="search"] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}

.emotion-0 [type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

.emotion-0::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.emotion-0 details {
  display: block;
}

.emotion-0 summary {
  display: list-item;
}

.emotion-0 template {
  display: none;
}

.emotion-0 [hidden] {
  display: none;
}

.emotion-0 * {
  box-sizing: border-box;
  font-family: "Helvetica Neue",Helvetica,sans-serif;
}

.emotion-0 * .is-disabled {
  opacity: 0.5;
  pointer-events: none;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  top: 0;
  left: 0;
  position: absolute;
  opacity: 0;
  z-index: -1;
  width: 1px;
  height: 1px;
  overflow: hidden;
}

input:focus~.emotion-8 {
  color: primary;
  background-color: highlight;
}

.emotion-8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: none;
  width: 24px;
  height: 24px;
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 4px;
  color: gray;
}

input:checked~.emotion-8 {
  display: block;
}

input:checked~.emotion-8 {
  color: primary;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 24px;
  height: 24px;
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 4px;
  color: gray;
}

input:checked~.emotion-9 {
  display: none;
}

input:checked~.emotion-9 {
  color: primary;
}

input:focus~.emotion-9 {
  color: primary;
  background-color: highlight;
}

.emotion-10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="emotion-1"
        >
          <div
            class="field-container emotion-4"
          >
            <label
              class="is-default emotion-5"
            >
              <div
                class="emotion-6"
              >
                <input
                  aria-checked="false"
                  class="emotion-7"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="is-default emotion-8"
                  fill="currentcolor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="is-default emotion-9"
                  fill="currentcolor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </div>
              Label
            </label>
          </div>
        </div>
        <button
          class=" emotion-10"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields checkboxes field 1`] = `
<DocumentFragment>
  .emotion-0 [type="checkbox"],
.emotion-0 [type="radio"] {
  box-sizing: border-box;
  padding: 0;
}

.emotion-0 html {
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
}

.emotion-0 main {
  display: block;
}

.emotion-0 h1 {
  font-size: 2em;
  margin: 0.67em 0;
}

.emotion-0 hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}

.emotion-0 pre {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 a {
  background-color: transparent;
}

.emotion-0 abbr[title] {
  border-bottom: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration: underline dotted;
  text-decoration: underline dotted;
}

.emotion-0 b,
.emotion-0 strong {
  font-weight: bolder;
}

.emotion-0 code,
.emotion-0 kbd,
.emotion-0 samp {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 small {
  font-size: 80%;
}

.emotion-0 sub,
.emotion-0 sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

.emotion-0 sub {
  bottom: -0.25em;
}

.emotion-0 sup {
  top: -0.5em;
}

.emotion-0 img {
  border-style: none;
}

.emotion-0 button,
.emotion-0 input,
.emotion-0 optgroup,
.emotion-0 select,
.emotion-0 textarea {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
}

.emotion-0 button,
.emotion-0 input {
  overflow: visible;
}

.emotion-0 button,
.emotion-0 select {
  text-transform: none;
}

.emotion-0 button,
.emotion-0 [type="button"],
.emotion-0 [type="reset"],
.emotion-0 [type="submit"] {
  -webkit-appearance: button;
}

.emotion-0 button::-moz-focus-inner,
.emotion-0 [type="button"]::-moz-focus-inner,
.emotion-0 [type="reset"]::-moz-focus-inner,
.emotion-0 [type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.emotion-0 button:-moz-focusring,
.emotion-0 [type="button"]:-moz-focusring,
.emotion-0 [type="reset"]:-moz-focusring,
.emotion-0 [type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.emotion-0 fieldset {
  padding: 0.35em 0.75em 0.625em;
}

.emotion-0 legend {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}

.emotion-0 progress {
  vertical-align: baseline;
}

.emotion-0 textarea {
  overflow: auto;
}

.emotion-0 body {
  margin: 0;
}

.emotion-0 [type="number"]::-webkit-inner-spin-button,
.emotion-0 [type="number"]::-webkit-outer-spin-button {
  height: auto;
}

.emotion-0 [type="search"] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}

.emotion-0 [type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

.emotion-0::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.emotion-0 details {
  display: block;
}

.emotion-0 summary {
  display: list-item;
}

.emotion-0 template {
  display: none;
}

.emotion-0 [hidden] {
  display: none;
}

.emotion-0 * {
  box-sizing: border-box;
  font-family: "Helvetica Neue",Helvetica,sans-serif;
}

.emotion-0 * .is-disabled {
  opacity: 0.5;
  pointer-events: none;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  top: 0;
  left: 0;
  position: absolute;
  opacity: 0;
  z-index: -1;
  width: 1px;
  height: 1px;
  overflow: hidden;
}

input:focus~.emotion-8 {
  color: primary;
  background-color: highlight;
}

.emotion-8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: none;
  width: 24px;
  height: 24px;
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 4px;
  color: gray;
}

input:checked~.emotion-8 {
  display: block;
}

input:checked~.emotion-8 {
  color: primary;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 24px;
  height: 24px;
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 4px;
  color: gray;
}

input:checked~.emotion-9 {
  display: none;
}

input:checked~.emotion-9 {
  color: primary;
}

input:focus~.emotion-9 {
  color: primary;
  background-color: highlight;
}

.emotion-31 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div>
          <div
            class="emotion-1"
          >
            <div
              class="field-container emotion-4"
            >
              <label
                class="is-default emotion-5"
              >
                <div
                  class="emotion-6"
                >
                  <input
                    aria-checked="false"
                    class="emotion-7"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="is-default emotion-8"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="is-default emotion-9"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </div>
                foo
              </label>
            </div>
          </div>
          <div
            class="emotion-1"
          >
            <div
              class="field-container emotion-4"
            >
              <label
                class="is-default emotion-5"
              >
                <div
                  class="emotion-6"
                >
                  <input
                    aria-checked="false"
                    class="emotion-7"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="is-default emotion-8"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="is-default emotion-9"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </div>
                bar
              </label>
            </div>
          </div>
          <div
            class="emotion-1"
          >
            <div
              class="field-container emotion-4"
            >
              <label
                class="is-default emotion-5"
              >
                <div
                  class="emotion-6"
                >
                  <input
                    aria-checked="false"
                    class="emotion-7"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="is-default emotion-8"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="is-default emotion-9"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </div>
                fuzz
              </label>
            </div>
          </div>
          <div
            class="emotion-1"
          >
            <div
              class="field-container emotion-4"
            >
              <label
                class="is-default emotion-5"
              >
                <div
                  class="emotion-6"
                >
                  <input
                    aria-checked="false"
                    class="emotion-7"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="is-default emotion-8"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="is-default emotion-9"
                    fill="currentcolor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </div>
                qux
              </label>
            </div>
          </div>
        </div>
        <button
          class=" emotion-31"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields password field 1`] = `
<DocumentFragment>
  .emotion-0 button:-moz-focusring,
.emotion-0 [type="button"]:-moz-focusring,
.emotion-0 [type="reset"]:-moz-focusring,
.emotion-0 [type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.emotion-0 html {
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
}

.emotion-0 main {
  display: block;
}

.emotion-0 h1 {
  font-size: 2em;
  margin: 0.67em 0;
}

.emotion-0 hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}

.emotion-0 pre {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 a {
  background-color: transparent;
}

.emotion-0 abbr[title] {
  border-bottom: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration: underline dotted;
  text-decoration: underline dotted;
}

.emotion-0 b,
.emotion-0 strong {
  font-weight: bolder;
}

.emotion-0 code,
.emotion-0 kbd,
.emotion-0 samp {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 small {
  font-size: 80%;
}

.emotion-0 sub,
.emotion-0 sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

.emotion-0 sub {
  bottom: -0.25em;
}

.emotion-0 sup {
  top: -0.5em;
}

.emotion-0 img {
  border-style: none;
}

.emotion-0 button,
.emotion-0 input,
.emotion-0 optgroup,
.emotion-0 select,
.emotion-0 textarea {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
}

.emotion-0 button,
.emotion-0 input {
  overflow: visible;
}

.emotion-0 button,
.emotion-0 select {
  text-transform: none;
}

.emotion-0 button,
.emotion-0 [type="button"],
.emotion-0 [type="reset"],
.emotion-0 [type="submit"] {
  -webkit-appearance: button;
}

.emotion-0 button::-moz-focus-inner,
.emotion-0 [type="button"]::-moz-focus-inner,
.emotion-0 [type="reset"]::-moz-focus-inner,
.emotion-0 [type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.emotion-0 body {
  margin: 0;
}

.emotion-0 fieldset {
  padding: 0.35em 0.75em 0.625em;
}

.emotion-0 legend {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}

.emotion-0 progress {
  vertical-align: baseline;
}

.emotion-0 textarea {
  overflow: auto;
}

.emotion-0 [type="checkbox"],
.emotion-0 [type="radio"] {
  box-sizing: border-box;
  padding: 0;
}

.emotion-0 [type="number"]::-webkit-inner-spin-button,
.emotion-0 [type="number"]::-webkit-outer-spin-button {
  height: auto;
}

.emotion-0 [type="search"] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}

.emotion-0 [type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

.emotion-0::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.emotion-0 details {
  display: block;
}

.emotion-0 summary {
  display: list-item;
}

.emotion-0 template {
  display: none;
}

.emotion-0 [hidden] {
  display: none;
}

.emotion-0 * {
  box-sizing: border-box;
  font-family: "Helvetica Neue",Helvetica,sans-serif;
}

.emotion-0 * .is-disabled {
  opacity: 0.5;
  pointer-events: none;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: default;
  color: inherit;
  background-color: transparent;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container emotion-3"
        >
          <label
            class="is-default emotion-4"
          >
            Label
          </label>
          <div
            class="is-default emotion-1"
          >
            <input
              class="is-default emotion-6"
              type="password"
              value=""
            />
          </div>
        </div>
        <button
          class=" emotion-7"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields select field 1`] = `
<DocumentFragment>
  .emotion-0 fieldset {
  padding: 0.35em 0.75em 0.625em;
}

.emotion-0 html {
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
}

.emotion-0 main {
  display: block;
}

.emotion-0 h1 {
  font-size: 2em;
  margin: 0.67em 0;
}

.emotion-0 hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}

.emotion-0 pre {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 a {
  background-color: transparent;
}

.emotion-0 abbr[title] {
  border-bottom: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration: underline dotted;
  text-decoration: underline dotted;
}

.emotion-0 b,
.emotion-0 strong {
  font-weight: bolder;
}

.emotion-0 code,
.emotion-0 kbd,
.emotion-0 samp {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 small {
  font-size: 80%;
}

.emotion-0 sub,
.emotion-0 sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

.emotion-0 sub {
  bottom: -0.25em;
}

.emotion-0 sup {
  top: -0.5em;
}

.emotion-0 img {
  border-style: none;
}

.emotion-0 button,
.emotion-0 input,
.emotion-0 optgroup,
.emotion-0 select,
.emotion-0 textarea {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
}

.emotion-0 button,
.emotion-0 input {
  overflow: visible;
}

.emotion-0 button,
.emotion-0 select {
  text-transform: none;
}

.emotion-0 button,
.emotion-0 [type="button"],
.emotion-0 [type="reset"],
.emotion-0 [type="submit"] {
  -webkit-appearance: button;
}

.emotion-0 button::-moz-focus-inner,
.emotion-0 [type="button"]::-moz-focus-inner,
.emotion-0 [type="reset"]::-moz-focus-inner,
.emotion-0 [type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.emotion-0 button:-moz-focusring,
.emotion-0 [type="button"]:-moz-focusring,
.emotion-0 [type="reset"]:-moz-focusring,
.emotion-0 [type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.emotion-0 body {
  margin: 0;
}

.emotion-0 legend {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}

.emotion-0 progress {
  vertical-align: baseline;
}

.emotion-0 textarea {
  overflow: auto;
}

.emotion-0 [type="checkbox"],
.emotion-0 [type="radio"] {
  box-sizing: border-box;
  padding: 0;
}

.emotion-0 [type="number"]::-webkit-inner-spin-button,
.emotion-0 [type="number"]::-webkit-outer-spin-button {
  height: auto;
}

.emotion-0 [type="search"] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}

.emotion-0 [type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

.emotion-0::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.emotion-0 details {
  display: block;
}

.emotion-0 summary {
  display: list-item;
}

.emotion-0 template {
  display: none;
}

.emotion-0 [hidden] {
  display: none;
}

.emotion-0 * {
  box-sizing: border-box;
  font-family: "Helvetica Neue",Helvetica,sans-serif;
}

.emotion-0 * .is-disabled {
  opacity: 0.5;
  pointer-events: none;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
}

.emotion-8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 22px;
  height: 22px;
  min-width: 22;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 22;
  height: 22;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container emotion-3"
        >
          <label
            class="is-default emotion-4"
          >
            Label
          </label>
          <div
            aria-hidden="true"
            style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
          >
            <input
              style="font-size: 16px;"
              tabindex="0"
              type="text"
            />
            <label>
              Label
              <select
                size="2"
                tabindex="-1"
              >
                <option
                  value="foo"
                >
                  foo
                </option>
                <option
                  value="bar"
                >
                  bar
                </option>
              </select>
            </label>
          </div>
          <div
            class="is-default emotion-1"
          >
            <button
              aria-expanded="false"
              aria-haspopup="listbox"
              class="is-default emotion-6"
              type="button"
            >
              <span
                class="emotion-1"
              >
                <div
                  class="emotion-8"
                >
                  Select
                </div>
              </span>
              <span
                aria-hidden="true"
                class="emotion-1"
              >
                <svg
                  class="mdi-icon emotion-10"
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M7,10L12,15L17,10H7Z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <button
          class=" emotion-6"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields select field with default 1`] = `
<DocumentFragment>
  .emotion-0 fieldset {
  padding: 0.35em 0.75em 0.625em;
}

.emotion-0 html {
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
}

.emotion-0 main {
  display: block;
}

.emotion-0 h1 {
  font-size: 2em;
  margin: 0.67em 0;
}

.emotion-0 hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}

.emotion-0 pre {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 a {
  background-color: transparent;
}

.emotion-0 abbr[title] {
  border-bottom: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration: underline dotted;
  text-decoration: underline dotted;
}

.emotion-0 b,
.emotion-0 strong {
  font-weight: bolder;
}

.emotion-0 code,
.emotion-0 kbd,
.emotion-0 samp {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 small {
  font-size: 80%;
}

.emotion-0 sub,
.emotion-0 sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

.emotion-0 sub {
  bottom: -0.25em;
}

.emotion-0 sup {
  top: -0.5em;
}

.emotion-0 img {
  border-style: none;
}

.emotion-0 button,
.emotion-0 input,
.emotion-0 optgroup,
.emotion-0 select,
.emotion-0 textarea {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
}

.emotion-0 button,
.emotion-0 input {
  overflow: visible;
}

.emotion-0 button,
.emotion-0 select {
  text-transform: none;
}

.emotion-0 button,
.emotion-0 [type="button"],
.emotion-0 [type="reset"],
.emotion-0 [type="submit"] {
  -webkit-appearance: button;
}

.emotion-0 button::-moz-focus-inner,
.emotion-0 [type="button"]::-moz-focus-inner,
.emotion-0 [type="reset"]::-moz-focus-inner,
.emotion-0 [type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.emotion-0 button:-moz-focusring,
.emotion-0 [type="button"]:-moz-focusring,
.emotion-0 [type="reset"]:-moz-focusring,
.emotion-0 [type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.emotion-0 body {
  margin: 0;
}

.emotion-0 legend {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}

.emotion-0 progress {
  vertical-align: baseline;
}

.emotion-0 textarea {
  overflow: auto;
}

.emotion-0 [type="checkbox"],
.emotion-0 [type="radio"] {
  box-sizing: border-box;
  padding: 0;
}

.emotion-0 [type="number"]::-webkit-inner-spin-button,
.emotion-0 [type="number"]::-webkit-outer-spin-button {
  height: auto;
}

.emotion-0 [type="search"] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}

.emotion-0 [type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

.emotion-0::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.emotion-0 details {
  display: block;
}

.emotion-0 summary {
  display: list-item;
}

.emotion-0 template {
  display: none;
}

.emotion-0 [hidden] {
  display: none;
}

.emotion-0 * {
  box-sizing: border-box;
  font-family: "Helvetica Neue",Helvetica,sans-serif;
}

.emotion-0 * .is-disabled {
  opacity: 0.5;
  pointer-events: none;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
}

.emotion-8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 22px;
  height: 22px;
  min-width: 22;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 22;
  height: 22;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container emotion-3"
        >
          <label
            class="is-default emotion-4"
          >
            Label
          </label>
          <div
            aria-hidden="true"
            style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
          >
            <input
              style="font-size: 16px;"
              tabindex="0"
              type="text"
            />
            <label>
              Label
              <select
                size="2"
                tabindex="-1"
              >
                <option
                  value="foo"
                >
                  foo
                </option>
                <option
                  value="bar"
                >
                  bar
                </option>
              </select>
            </label>
          </div>
          <div
            class="is-default emotion-1"
          >
            <button
              aria-expanded="false"
              aria-haspopup="listbox"
              class="is-default emotion-6"
              type="button"
            >
              <span
                class="emotion-1"
              >
                <div
                  class="emotion-8"
                >
                  Select
                </div>
              </span>
              <span
                aria-hidden="true"
                class="emotion-1"
              >
                <svg
                  class="mdi-icon emotion-10"
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M7,10L12,15L17,10H7Z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <button
          class=" emotion-6"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields string field format email 1`] = `
<DocumentFragment>
  .emotion-0 button:-moz-focusring,
.emotion-0 [type="button"]:-moz-focusring,
.emotion-0 [type="reset"]:-moz-focusring,
.emotion-0 [type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.emotion-0 html {
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
}

.emotion-0 main {
  display: block;
}

.emotion-0 h1 {
  font-size: 2em;
  margin: 0.67em 0;
}

.emotion-0 hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}

.emotion-0 pre {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 a {
  background-color: transparent;
}

.emotion-0 abbr[title] {
  border-bottom: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration: underline dotted;
  text-decoration: underline dotted;
}

.emotion-0 b,
.emotion-0 strong {
  font-weight: bolder;
}

.emotion-0 code,
.emotion-0 kbd,
.emotion-0 samp {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 small {
  font-size: 80%;
}

.emotion-0 sub,
.emotion-0 sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

.emotion-0 sub {
  bottom: -0.25em;
}

.emotion-0 sup {
  top: -0.5em;
}

.emotion-0 img {
  border-style: none;
}

.emotion-0 button,
.emotion-0 input,
.emotion-0 optgroup,
.emotion-0 select,
.emotion-0 textarea {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
}

.emotion-0 button,
.emotion-0 input {
  overflow: visible;
}

.emotion-0 button,
.emotion-0 select {
  text-transform: none;
}

.emotion-0 button,
.emotion-0 [type="button"],
.emotion-0 [type="reset"],
.emotion-0 [type="submit"] {
  -webkit-appearance: button;
}

.emotion-0 button::-moz-focus-inner,
.emotion-0 [type="button"]::-moz-focus-inner,
.emotion-0 [type="reset"]::-moz-focus-inner,
.emotion-0 [type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.emotion-0 body {
  margin: 0;
}

.emotion-0 fieldset {
  padding: 0.35em 0.75em 0.625em;
}

.emotion-0 legend {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}

.emotion-0 progress {
  vertical-align: baseline;
}

.emotion-0 textarea {
  overflow: auto;
}

.emotion-0 [type="checkbox"],
.emotion-0 [type="radio"] {
  box-sizing: border-box;
  padding: 0;
}

.emotion-0 [type="number"]::-webkit-inner-spin-button,
.emotion-0 [type="number"]::-webkit-outer-spin-button {
  height: auto;
}

.emotion-0 [type="search"] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}

.emotion-0 [type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

.emotion-0::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.emotion-0 details {
  display: block;
}

.emotion-0 summary {
  display: list-item;
}

.emotion-0 template {
  display: none;
}

.emotion-0 [hidden] {
  display: none;
}

.emotion-0 * {
  box-sizing: border-box;
  font-family: "Helvetica Neue",Helvetica,sans-serif;
}

.emotion-0 * .is-disabled {
  opacity: 0.5;
  pointer-events: none;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: default;
  color: inherit;
  background-color: transparent;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container emotion-3"
        >
          <label
            class="is-default emotion-4"
          >
            Label
          </label>
          <div
            class="is-default emotion-1"
          >
            <input
              class="is-default emotion-6"
              value=""
            />
          </div>
        </div>
        <button
          class=" emotion-7"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields string field format uri 1`] = `
<DocumentFragment>
  .emotion-0 button:-moz-focusring,
.emotion-0 [type="button"]:-moz-focusring,
.emotion-0 [type="reset"]:-moz-focusring,
.emotion-0 [type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.emotion-0 html {
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
}

.emotion-0 main {
  display: block;
}

.emotion-0 h1 {
  font-size: 2em;
  margin: 0.67em 0;
}

.emotion-0 hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}

.emotion-0 pre {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 a {
  background-color: transparent;
}

.emotion-0 abbr[title] {
  border-bottom: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration: underline dotted;
  text-decoration: underline dotted;
}

.emotion-0 b,
.emotion-0 strong {
  font-weight: bolder;
}

.emotion-0 code,
.emotion-0 kbd,
.emotion-0 samp {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 small {
  font-size: 80%;
}

.emotion-0 sub,
.emotion-0 sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

.emotion-0 sub {
  bottom: -0.25em;
}

.emotion-0 sup {
  top: -0.5em;
}

.emotion-0 img {
  border-style: none;
}

.emotion-0 button,
.emotion-0 input,
.emotion-0 optgroup,
.emotion-0 select,
.emotion-0 textarea {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
}

.emotion-0 button,
.emotion-0 input {
  overflow: visible;
}

.emotion-0 button,
.emotion-0 select {
  text-transform: none;
}

.emotion-0 button,
.emotion-0 [type="button"],
.emotion-0 [type="reset"],
.emotion-0 [type="submit"] {
  -webkit-appearance: button;
}

.emotion-0 button::-moz-focus-inner,
.emotion-0 [type="button"]::-moz-focus-inner,
.emotion-0 [type="reset"]::-moz-focus-inner,
.emotion-0 [type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.emotion-0 body {
  margin: 0;
}

.emotion-0 fieldset {
  padding: 0.35em 0.75em 0.625em;
}

.emotion-0 legend {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}

.emotion-0 progress {
  vertical-align: baseline;
}

.emotion-0 textarea {
  overflow: auto;
}

.emotion-0 [type="checkbox"],
.emotion-0 [type="radio"] {
  box-sizing: border-box;
  padding: 0;
}

.emotion-0 [type="number"]::-webkit-inner-spin-button,
.emotion-0 [type="number"]::-webkit-outer-spin-button {
  height: auto;
}

.emotion-0 [type="search"] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}

.emotion-0 [type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

.emotion-0::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.emotion-0 details {
  display: block;
}

.emotion-0 summary {
  display: list-item;
}

.emotion-0 template {
  display: none;
}

.emotion-0 [hidden] {
  display: none;
}

.emotion-0 * {
  box-sizing: border-box;
  font-family: "Helvetica Neue",Helvetica,sans-serif;
}

.emotion-0 * .is-disabled {
  opacity: 0.5;
  pointer-events: none;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: default;
  color: inherit;
  background-color: transparent;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container emotion-3"
        >
          <label
            class="is-default emotion-4"
          >
            Label
          </label>
          <div
            class="is-default emotion-1"
          >
            <input
              class="is-default emotion-6"
              value=""
            />
          </div>
        </div>
        <button
          class=" emotion-7"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields string field regular 1`] = `
<DocumentFragment>
  .emotion-0 button:-moz-focusring,
.emotion-0 [type="button"]:-moz-focusring,
.emotion-0 [type="reset"]:-moz-focusring,
.emotion-0 [type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.emotion-0 html {
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
}

.emotion-0 main {
  display: block;
}

.emotion-0 h1 {
  font-size: 2em;
  margin: 0.67em 0;
}

.emotion-0 hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}

.emotion-0 pre {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 a {
  background-color: transparent;
}

.emotion-0 abbr[title] {
  border-bottom: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration: underline dotted;
  text-decoration: underline dotted;
}

.emotion-0 b,
.emotion-0 strong {
  font-weight: bolder;
}

.emotion-0 code,
.emotion-0 kbd,
.emotion-0 samp {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 small {
  font-size: 80%;
}

.emotion-0 sub,
.emotion-0 sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

.emotion-0 sub {
  bottom: -0.25em;
}

.emotion-0 sup {
  top: -0.5em;
}

.emotion-0 img {
  border-style: none;
}

.emotion-0 button,
.emotion-0 input,
.emotion-0 optgroup,
.emotion-0 select,
.emotion-0 textarea {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
}

.emotion-0 button,
.emotion-0 input {
  overflow: visible;
}

.emotion-0 button,
.emotion-0 select {
  text-transform: none;
}

.emotion-0 button,
.emotion-0 [type="button"],
.emotion-0 [type="reset"],
.emotion-0 [type="submit"] {
  -webkit-appearance: button;
}

.emotion-0 button::-moz-focus-inner,
.emotion-0 [type="button"]::-moz-focus-inner,
.emotion-0 [type="reset"]::-moz-focus-inner,
.emotion-0 [type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.emotion-0 body {
  margin: 0;
}

.emotion-0 fieldset {
  padding: 0.35em 0.75em 0.625em;
}

.emotion-0 legend {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}

.emotion-0 progress {
  vertical-align: baseline;
}

.emotion-0 textarea {
  overflow: auto;
}

.emotion-0 [type="checkbox"],
.emotion-0 [type="radio"] {
  box-sizing: border-box;
  padding: 0;
}

.emotion-0 [type="number"]::-webkit-inner-spin-button,
.emotion-0 [type="number"]::-webkit-outer-spin-button {
  height: auto;
}

.emotion-0 [type="search"] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}

.emotion-0 [type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

.emotion-0::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.emotion-0 details {
  display: block;
}

.emotion-0 summary {
  display: list-item;
}

.emotion-0 template {
  display: none;
}

.emotion-0 [hidden] {
  display: none;
}

.emotion-0 * {
  box-sizing: border-box;
  font-family: "Helvetica Neue",Helvetica,sans-serif;
}

.emotion-0 * .is-disabled {
  opacity: 0.5;
  pointer-events: none;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: default;
  color: inherit;
  background-color: transparent;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container emotion-3"
        >
          <label
            class="is-default emotion-4"
          >
            Label
          </label>
          <div
            class="is-default emotion-1"
          >
            <input
              class="is-default emotion-6"
              value=""
            />
          </div>
        </div>
        <button
          class=" emotion-7"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields string field with custom errors as sentence 1`] = `
<DocumentFragment>
  .emotion-0 fieldset {
  padding: 0.35em 0.75em 0.625em;
}

.emotion-0 html {
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
}

.emotion-0 main {
  display: block;
}

.emotion-0 h1 {
  font-size: 2em;
  margin: 0.67em 0;
}

.emotion-0 hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}

.emotion-0 pre {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 a {
  background-color: transparent;
}

.emotion-0 abbr[title] {
  border-bottom: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration: underline dotted;
  text-decoration: underline dotted;
}

.emotion-0 b,
.emotion-0 strong {
  font-weight: bolder;
}

.emotion-0 code,
.emotion-0 kbd,
.emotion-0 samp {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 small {
  font-size: 80%;
}

.emotion-0 sub,
.emotion-0 sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

.emotion-0 sub {
  bottom: -0.25em;
}

.emotion-0 sup {
  top: -0.5em;
}

.emotion-0 img {
  border-style: none;
}

.emotion-0 button,
.emotion-0 input,
.emotion-0 optgroup,
.emotion-0 select,
.emotion-0 textarea {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
}

.emotion-0 button,
.emotion-0 input {
  overflow: visible;
}

.emotion-0 button,
.emotion-0 select {
  text-transform: none;
}

.emotion-0 button,
.emotion-0 [type="button"],
.emotion-0 [type="reset"],
.emotion-0 [type="submit"] {
  -webkit-appearance: button;
}

.emotion-0 button::-moz-focus-inner,
.emotion-0 [type="button"]::-moz-focus-inner,
.emotion-0 [type="reset"]::-moz-focus-inner,
.emotion-0 [type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.emotion-0 button:-moz-focusring,
.emotion-0 [type="button"]:-moz-focusring,
.emotion-0 [type="reset"]:-moz-focusring,
.emotion-0 [type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.emotion-0 body {
  margin: 0;
}

.emotion-0 legend {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}

.emotion-0 progress {
  vertical-align: baseline;
}

.emotion-0 textarea {
  overflow: auto;
}

.emotion-0 [type="checkbox"],
.emotion-0 [type="radio"] {
  box-sizing: border-box;
  padding: 0;
}

.emotion-0 [type="number"]::-webkit-inner-spin-button,
.emotion-0 [type="number"]::-webkit-outer-spin-button {
  height: auto;
}

.emotion-0 [type="search"] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}

.emotion-0 [type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

.emotion-0::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.emotion-0 details {
  display: block;
}

.emotion-0 summary {
  display: list-item;
}

.emotion-0 template {
  display: none;
}

.emotion-0 [hidden] {
  display: none;
}

.emotion-0 * {
  box-sizing: border-box;
  font-family: "Helvetica Neue",Helvetica,sans-serif;
}

.emotion-0 * .is-disabled {
  opacity: 0.5;
  pointer-events: none;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: default;
  color: inherit;
  background-color: transparent;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-top: sm;
}

.emotion-8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container emotion-3"
        >
          <label
            class="is-error emotion-4"
          >
            Label
          </label>
          <div
            class="is-error emotion-1"
          >
            <input
              class="is-error emotion-6"
              value=""
            />
          </div>
          <div
            class="is-error emotion-7"
            role="status"
          >
            Should be string, Blah
          </div>
        </div>
        <button
          class="is-focused emotion-8"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields string field with help text 1`] = `
<DocumentFragment>
  .emotion-0 fieldset {
  padding: 0.35em 0.75em 0.625em;
}

.emotion-0 html {
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
}

.emotion-0 main {
  display: block;
}

.emotion-0 h1 {
  font-size: 2em;
  margin: 0.67em 0;
}

.emotion-0 hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}

.emotion-0 pre {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 a {
  background-color: transparent;
}

.emotion-0 abbr[title] {
  border-bottom: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration: underline dotted;
  text-decoration: underline dotted;
}

.emotion-0 b,
.emotion-0 strong {
  font-weight: bolder;
}

.emotion-0 code,
.emotion-0 kbd,
.emotion-0 samp {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 small {
  font-size: 80%;
}

.emotion-0 sub,
.emotion-0 sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

.emotion-0 sub {
  bottom: -0.25em;
}

.emotion-0 sup {
  top: -0.5em;
}

.emotion-0 img {
  border-style: none;
}

.emotion-0 button,
.emotion-0 input,
.emotion-0 optgroup,
.emotion-0 select,
.emotion-0 textarea {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
}

.emotion-0 button,
.emotion-0 input {
  overflow: visible;
}

.emotion-0 button,
.emotion-0 select {
  text-transform: none;
}

.emotion-0 button,
.emotion-0 [type="button"],
.emotion-0 [type="reset"],
.emotion-0 [type="submit"] {
  -webkit-appearance: button;
}

.emotion-0 button::-moz-focus-inner,
.emotion-0 [type="button"]::-moz-focus-inner,
.emotion-0 [type="reset"]::-moz-focus-inner,
.emotion-0 [type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.emotion-0 button:-moz-focusring,
.emotion-0 [type="button"]:-moz-focusring,
.emotion-0 [type="reset"]:-moz-focusring,
.emotion-0 [type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.emotion-0 body {
  margin: 0;
}

.emotion-0 legend {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}

.emotion-0 progress {
  vertical-align: baseline;
}

.emotion-0 textarea {
  overflow: auto;
}

.emotion-0 [type="checkbox"],
.emotion-0 [type="radio"] {
  box-sizing: border-box;
  padding: 0;
}

.emotion-0 [type="number"]::-webkit-inner-spin-button,
.emotion-0 [type="number"]::-webkit-outer-spin-button {
  height: auto;
}

.emotion-0 [type="search"] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}

.emotion-0 [type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

.emotion-0::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.emotion-0 details {
  display: block;
}

.emotion-0 summary {
  display: list-item;
}

.emotion-0 template {
  display: none;
}

.emotion-0 [hidden] {
  display: none;
}

.emotion-0 * {
  box-sizing: border-box;
  font-family: "Helvetica Neue",Helvetica,sans-serif;
}

.emotion-0 * .is-disabled {
  opacity: 0.5;
  pointer-events: none;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: default;
  color: inherit;
  background-color: transparent;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-top: sm;
}

.emotion-8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container emotion-3"
        >
          <label
            class="is-default emotion-4"
          >
            Label
          </label>
          <div
            class="is-default emotion-1"
          >
            <input
              class="is-default emotion-6"
              value=""
            />
          </div>
          <div
            class="is-default emotion-7"
            role="status"
          >
            help text
          </div>
        </div>
        <button
          class=" emotion-8"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields string field with markdown errors 1`] = `
<DocumentFragment>
  .emotion-0 button:-moz-focusring,
.emotion-0 [type="button"]:-moz-focusring,
.emotion-0 [type="reset"]:-moz-focusring,
.emotion-0 [type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.emotion-0 html {
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
}

.emotion-0 main {
  display: block;
}

.emotion-0 h1 {
  font-size: 2em;
  margin: 0.67em 0;
}

.emotion-0 hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}

.emotion-0 pre {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 a {
  background-color: transparent;
}

.emotion-0 abbr[title] {
  border-bottom: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration: underline dotted;
  text-decoration: underline dotted;
}

.emotion-0 b,
.emotion-0 strong {
  font-weight: bolder;
}

.emotion-0 code,
.emotion-0 kbd,
.emotion-0 samp {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 small {
  font-size: 80%;
}

.emotion-0 sub,
.emotion-0 sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

.emotion-0 sub {
  bottom: -0.25em;
}

.emotion-0 sup {
  top: -0.5em;
}

.emotion-0 img {
  border-style: none;
}

.emotion-0 button,
.emotion-0 input,
.emotion-0 optgroup,
.emotion-0 select,
.emotion-0 textarea {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
}

.emotion-0 button,
.emotion-0 input {
  overflow: visible;
}

.emotion-0 button,
.emotion-0 select {
  text-transform: none;
}

.emotion-0 button,
.emotion-0 [type="button"],
.emotion-0 [type="reset"],
.emotion-0 [type="submit"] {
  -webkit-appearance: button;
}

.emotion-0 button::-moz-focus-inner,
.emotion-0 [type="button"]::-moz-focus-inner,
.emotion-0 [type="reset"]::-moz-focus-inner,
.emotion-0 [type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.emotion-0 body {
  margin: 0;
}

.emotion-0 fieldset {
  padding: 0.35em 0.75em 0.625em;
}

.emotion-0 legend {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}

.emotion-0 progress {
  vertical-align: baseline;
}

.emotion-0 textarea {
  overflow: auto;
}

.emotion-0 [type="checkbox"],
.emotion-0 [type="radio"] {
  box-sizing: border-box;
  padding: 0;
}

.emotion-0 [type="number"]::-webkit-inner-spin-button,
.emotion-0 [type="number"]::-webkit-outer-spin-button {
  height: auto;
}

.emotion-0 [type="search"] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}

.emotion-0 [type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

.emotion-0::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.emotion-0 details {
  display: block;
}

.emotion-0 summary {
  display: list-item;
}

.emotion-0 template {
  display: none;
}

.emotion-0 [hidden] {
  display: none;
}

.emotion-0 * {
  box-sizing: border-box;
  font-family: "Helvetica Neue",Helvetica,sans-serif;
}

.emotion-0 * .is-disabled {
  opacity: 0.5;
  pointer-events: none;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: default;
  color: inherit;
  background-color: transparent;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container emotion-3"
        >
          <label
            class="is-default emotion-4"
          >
            Test
          </label>
          <div
            class="is-default emotion-1"
          >
            <input
              class="is-default emotion-6"
              value=""
            />
          </div>
        </div>
        <button
          class=" emotion-7"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields string field with placeholder 1`] = `
<DocumentFragment>
  .emotion-0 button:-moz-focusring,
.emotion-0 [type="button"]:-moz-focusring,
.emotion-0 [type="reset"]:-moz-focusring,
.emotion-0 [type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.emotion-0 html {
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
}

.emotion-0 main {
  display: block;
}

.emotion-0 h1 {
  font-size: 2em;
  margin: 0.67em 0;
}

.emotion-0 hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}

.emotion-0 pre {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 a {
  background-color: transparent;
}

.emotion-0 abbr[title] {
  border-bottom: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration: underline dotted;
  text-decoration: underline dotted;
}

.emotion-0 b,
.emotion-0 strong {
  font-weight: bolder;
}

.emotion-0 code,
.emotion-0 kbd,
.emotion-0 samp {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 small {
  font-size: 80%;
}

.emotion-0 sub,
.emotion-0 sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

.emotion-0 sub {
  bottom: -0.25em;
}

.emotion-0 sup {
  top: -0.5em;
}

.emotion-0 img {
  border-style: none;
}

.emotion-0 button,
.emotion-0 input,
.emotion-0 optgroup,
.emotion-0 select,
.emotion-0 textarea {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
}

.emotion-0 button,
.emotion-0 input {
  overflow: visible;
}

.emotion-0 button,
.emotion-0 select {
  text-transform: none;
}

.emotion-0 button,
.emotion-0 [type="button"],
.emotion-0 [type="reset"],
.emotion-0 [type="submit"] {
  -webkit-appearance: button;
}

.emotion-0 button::-moz-focus-inner,
.emotion-0 [type="button"]::-moz-focus-inner,
.emotion-0 [type="reset"]::-moz-focus-inner,
.emotion-0 [type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.emotion-0 body {
  margin: 0;
}

.emotion-0 fieldset {
  padding: 0.35em 0.75em 0.625em;
}

.emotion-0 legend {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}

.emotion-0 progress {
  vertical-align: baseline;
}

.emotion-0 textarea {
  overflow: auto;
}

.emotion-0 [type="checkbox"],
.emotion-0 [type="radio"] {
  box-sizing: border-box;
  padding: 0;
}

.emotion-0 [type="number"]::-webkit-inner-spin-button,
.emotion-0 [type="number"]::-webkit-outer-spin-button {
  height: auto;
}

.emotion-0 [type="search"] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}

.emotion-0 [type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

.emotion-0::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.emotion-0 details {
  display: block;
}

.emotion-0 summary {
  display: list-item;
}

.emotion-0 template {
  display: none;
}

.emotion-0 [hidden] {
  display: none;
}

.emotion-0 * {
  box-sizing: border-box;
  font-family: "Helvetica Neue",Helvetica,sans-serif;
}

.emotion-0 * .is-disabled {
  opacity: 0.5;
  pointer-events: none;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: default;
  color: inherit;
  background-color: transparent;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container emotion-3"
        >
          <label
            class="is-default emotion-4"
          >
            Label
          </label>
          <div
            class="is-default emotion-1"
          >
            <input
              class="is-default emotion-6"
              placeholder="placeholder"
              value=""
            />
          </div>
        </div>
        <button
          class=" emotion-7"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single fields textarea field 1`] = `
<DocumentFragment>
  .emotion-0 button:-moz-focusring,
.emotion-0 [type="button"]:-moz-focusring,
.emotion-0 [type="reset"]:-moz-focusring,
.emotion-0 [type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.emotion-0 html {
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
}

.emotion-0 main {
  display: block;
}

.emotion-0 h1 {
  font-size: 2em;
  margin: 0.67em 0;
}

.emotion-0 hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}

.emotion-0 pre {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 a {
  background-color: transparent;
}

.emotion-0 abbr[title] {
  border-bottom: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration: underline dotted;
  text-decoration: underline dotted;
}

.emotion-0 b,
.emotion-0 strong {
  font-weight: bolder;
}

.emotion-0 code,
.emotion-0 kbd,
.emotion-0 samp {
  font-family: monospace,monospace;
  font-size: 1em;
}

.emotion-0 small {
  font-size: 80%;
}

.emotion-0 sub,
.emotion-0 sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

.emotion-0 sub {
  bottom: -0.25em;
}

.emotion-0 sup {
  top: -0.5em;
}

.emotion-0 img {
  border-style: none;
}

.emotion-0 button,
.emotion-0 input,
.emotion-0 optgroup,
.emotion-0 select,
.emotion-0 textarea {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
}

.emotion-0 button,
.emotion-0 input {
  overflow: visible;
}

.emotion-0 button,
.emotion-0 select {
  text-transform: none;
}

.emotion-0 button,
.emotion-0 [type="button"],
.emotion-0 [type="reset"],
.emotion-0 [type="submit"] {
  -webkit-appearance: button;
}

.emotion-0 button::-moz-focus-inner,
.emotion-0 [type="button"]::-moz-focus-inner,
.emotion-0 [type="reset"]::-moz-focus-inner,
.emotion-0 [type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.emotion-0 body {
  margin: 0;
}

.emotion-0 fieldset {
  padding: 0.35em 0.75em 0.625em;
}

.emotion-0 legend {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}

.emotion-0 progress {
  vertical-align: baseline;
}

.emotion-0 textarea {
  overflow: auto;
}

.emotion-0 [type="checkbox"],
.emotion-0 [type="radio"] {
  box-sizing: border-box;
  padding: 0;
}

.emotion-0 [type="number"]::-webkit-inner-spin-button,
.emotion-0 [type="number"]::-webkit-outer-spin-button {
  height: auto;
}

.emotion-0 [type="search"] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}

.emotion-0 [type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

.emotion-0::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.emotion-0 details {
  display: block;
}

.emotion-0 summary {
  display: list-item;
}

.emotion-0 template {
  display: none;
}

.emotion-0 [hidden] {
  display: none;
}

.emotion-0 * {
  box-sizing: border-box;
  font-family: "Helvetica Neue",Helvetica,sans-serif;
}

.emotion-0 * .is-disabled {
  opacity: 0.5;
  pointer-events: none;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: default;
  color: inherit;
  background-color: transparent;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2"
    >
      <form
        autocomplete="off"
        class="form"
        novalidate=""
      >
        <div
          class="field-container emotion-3"
          rows="2"
        >
          <label
            class="is-default emotion-4"
          >
            Label
          </label>
          <div
            class="is-default emotion-1"
          >
            <textarea
              class="is-default emotion-6"
              rows="2"
            />
          </div>
        </div>
        <button
          class=" emotion-7"
          type="primary"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;
